--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "material",
   "version": "0.1.0",
+  "description": "Material UI Component Builder",
+  "main": "public/electron.js",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
+    "electron-is-dev": "^1.1.0",
     "jsx-to-string": "^1.4.0",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
@@ -17,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +40,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "cross-env": "^6.0.3",
+    "electron": "^7.1.2",
+    "electron-builder": "^21.2.0",
+    "wait-on": "^3.3.0"
   }
 }
